# initialise-gopass-summon-action

./: .gpg-id  .pre-commit-config.yaml  LICENSE  README.md  action.yml  add-mask  index.js  install  package-lock.json  package.json  pyproject.toml  tests.py
.github/: dependabot.yaml  dependabot.yml  renovate.json5
.github/workflows/: changelog.yaml  dependency-update-review.yaml  main.yaml
.public-keys/: 0xC7BB0E3B91CB72CC
ci/: config.yaml  requirements.txt
