[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[project]
classifiers = []
dynamic = ["dependencies", "version"]
name = "initialise-gopass-summon-action"
description = "GitHub action used to initialize gopass and summon with the password store"
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
